--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++代码分享平台</title>
+    <title>极域课堂杀手源代码分享</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -88,7 +88,7 @@
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-code text-blue-400 text-2xl"></i>
                     <h1 class="text-2xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
-                        C++代码分享平台
+                        极域课堂杀手源代码分享
                     </h1>
                 </div>
                 <div class="flex space-x-6">
@@ -113,7 +113,7 @@
                 <p>本平台致力于展示高质量的C++代码示例，特别是从专业资源获取的优秀实践代码。</p>
                 <p class="flex items-center">
                     <i class="fas fa-rocket text-green-400 mr-2"></i>
-                    <span>当前展示：<strong>JiYukiller C++ 代码</strong></span>
+                    <span>当前展示：<strong>极域课堂杀手源代码</strong></span>
                 </p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6">
                     <div class="text-center p-4 rounded-lg bg-white/10">
